--- a/manifest.yml
+++ b/manifest.yml
@@ -6,7 +6,7 @@ declared-services:
 applications:
 - services:
   - ipa-cloudant_service
-  name: aps-robot_nao
+  name: aps-robot-nao
   command: node app.js
   path: .
   instances: 1
